initial pass on integrating vueui calendar + banner from @vanecat - use rollup to build vue ui, build at vue/vueui.js - calendar page renders via both /*/ and /*? queries - banner support for framed mode only for now - ensure banner updated in response to inner frame events - combine cdxquery classes into vue build, expose single entrypoint VueUI.main
- initial set of vueui dev, calendar, banner, calendar hover mode

- ensure embedded mode replay is working

- config: rename ui vars to 'vue_calendar_ui' and 'vue_timeline_banner'

- dependencies: update to wombat 3.3.6

- bump to 2.7.0b0

--- a/config.yaml
+++ b/config.yaml
@@ -1,12 +1,18 @@
 # pywb config file
 # ========================================
 #
+debug: true
+ui:
+  vue_calendar_ui: true
+  vue_timeline_banner: true
 
 collections:
     all: $all
     pywb:
         index_paths: ./sample_archive/cdx/
         archive_paths: ./sample_archive/warcs/
+
+    ukwa: cdx+https://www.webarchive.org.uk/wayback/archive/cdx
 
 # Settings for each collection
 use_js_obj_proxy: true
@@ -16,6 +22,8 @@ enable_memento: true
 
 # Replay content in an iframe
 framed_replay: true
+
+redirect_to_exact: true
 
 
 # uncomment and change to set default locale
