--- a/config.yaml
+++ b/config.yaml
@@ -2,9 +2,13 @@
 # ========================================
 #
 debug: true
-ui:
-  vue_calendar_ui: true
-  vue_timeline_banner: true
+
+# Uncomment to set banner colors and logo
+# ui:
+  # logo: path/relative/from/static/logo.png
+  # navbar_background_hex: 0c49b0
+  # navbar_color_hex: fff
+  # navbar_light_buttons: true
 
 collections:
     all: $all
@@ -18,7 +22,7 @@ collections:
 # Settings for each collection
 use_js_obj_proxy: true
 
-# Memento support, enable
+# Eanable Memento support
 enable_memento: true
 
 # Replay content in an iframe
@@ -26,11 +30,10 @@ framed_replay: true
 
 redirect_to_exact: true
 
-
-# uncomment and change to set default locale
+# Uncomment and change to set default locale
 # default_locale: en
 
-# uncomment to set available locales
-locales:
-  - en
-  - ru
+# Uncomment to set available locales
+# locales:
+#   - en
+#   - ru
