head_insert: don't include banner_html, only used for framed replay now wombat: bump to latest wombat 3.3.7 add new custom_banner to head_insert template for frameless replay

--- a/pywb/default_config.yaml
+++ b/pywb/default_config.yaml
@@ -12,6 +12,7 @@ templates_dir: templates
 
 # Template HTML
 banner_html: banner.html
+custom_banner_html: custom_banner.html
 head_insert_html: head_insert.html
 frame_insert_html: frame_insert.html
 
@@ -36,6 +37,7 @@ info_json: collinfo.json
 # HTML Templates List
 html_templates:
     - banner_html
+    - custom_banner_html
     - head_insert_html
     - frame_insert_html
 
